--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
     }
   ],
   "require": {
-    "php": "^7.4"
+    "php": "^7.4",
+    "ext-intl": "*"
   },
   "require-dev": {
     "friendsofphp/php-cs-fixer": "^2.16",
