--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "macmotp/codegen",
-  "version": "v0.1.4",
-  "description": "Generate human friendly codes with patterns",
+  "version": "v0.1.5",
+  "description": "Generate human friendly codes",
   "keywords": [
     "macmotp",
     "codegen",
@@ -23,12 +23,12 @@
     }
   ],
   "require": {
-    "php": "^7.4",
+    "php": "^8.0",
     "ext-intl": "*"
   },
   "require-dev": {
-    "friendsofphp/php-cs-fixer": "^2.16",
-    "phpunit/phpunit": "^9.3"
+    "friendsofphp/php-cs-fixer": "^2.19",
+    "phpunit/phpunit": "^9.5"
   },
   "autoload": {
     "psr-4": {
