--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "macmotp/codegen",
-  "version": "v0.1.5",
+  "version": "v0.2.0",
   "description": "Generate human friendly codes",
   "keywords": [
     "macmotp",
@@ -23,11 +23,10 @@
     }
   ],
   "require": {
-    "php": "^8.0",
+    "php": ">=8.0",
     "ext-intl": "*"
   },
   "require-dev": {
-    "friendsofphp/php-cs-fixer": "^2.19",
     "phpunit/phpunit": "^9.5"
   },
   "autoload": {
