--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,8 @@
     "ext-intl": "*"
   },
   "require-dev": {
-    "phpunit/phpunit": "^9.5"
+    "friendsofphp/php-cs-fixer": "^3.21",
+    "phpunit/phpunit": "^10.2"
   },
   "autoload": {
     "psr-4": {
