--- a/composer.json
+++ b/composer.json
@@ -41,7 +41,7 @@
     }
   },
   "scripts": {
-    "test": "vendor/bin/phpunit",
+    "test": "vendor/bin/phpunit --no-coverage",
     "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
     "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes"
   },
