--- a/.github/workflows/testing-php8.2.yml
+++ b/.github/workflows/testing-php8.2.yml
@@ -1,4 +1,4 @@
-name: Tests
+name: Tests on PHP 8.2
 
 on: [push, pull_request]
 
@@ -9,7 +9,7 @@ jobs:
       fail-fast: true
       matrix:
         os: [ubuntu-latest]
-        php: [8.0]
+        php: [8.2]
         dependency-version: [prefer-stable]
 
     name: P${{ matrix.php }} - ${{ matrix.dependency-version }} - ${{ matrix.os }}
@@ -35,4 +35,4 @@ jobs:
         run: composer install
 
       - name: Execute tests
-        run: vendor/bin/phpunit
+        run: composer test
