--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
   "name": "macmotp/codegen",
-  "version": "v0.1.5",
+  "version": "v0.2.0",
   "description": "Generate human friendly codes",
   "keywords": [
     "macmotp",
@@ -23,12 +23,12 @@
     }
   ],
   "require": {
-    "php": "^8.0",
+    "php": ">=8.0",
     "ext-intl": "*"
   },
   "require-dev": {
-    "friendsofphp/php-cs-fixer": "^2.19",
-    "phpunit/phpunit": "^9.5"
+    "friendsofphp/php-cs-fixer": "^3.21",
+    "phpunit/phpunit": "^10.2"
   },
   "autoload": {
     "psr-4": {
@@ -41,7 +41,7 @@
     }
   },
   "scripts": {
-    "test": "vendor/bin/phpunit",
+    "test": "vendor/bin/phpunit --no-coverage",
     "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
     "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes"
   },
